log/build_2022-12-19_19-32-10/software_training/stderr.log
[1m/home/edw/Documents/uwrt/software_challenge/src/software_training/src/p1_clear.cpp:8:5: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'std'[0m
    std::cout<<"HJELLOOO"<<std::endl;
[0;1;32m    ^
[0m[1m/home/edw/Documents/uwrt/software_challenge/src/software_training/src/p1_clear.cpp:8:28: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'std'[0m
    std::cout<<"HJELLOOO"<<std::endl;
[0;1;32m                           ^
[0m2 errors generated.
make[2]: *** [CMakeFiles/p1.dir/build.make:76: CMakeFiles/p1.dir/src/p1_clear.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/p1.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
